Removed qt multimedia dependencies and started implementing qt 3d interface.

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,7 @@
         <file>main.qml</file>
         <file>MainForm.ui.qml</file>
         <file>CustomFileDialog.qml</file>
+        <file>SphereEntity.qml</file>
+        <file>VASCameraController.qml</file>
     </qresource>
 </RCC>
