Fixed repeating popup menu bug when right clicking on audio source.Need to fix error of position editor box not showing up.

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,6 @@
         <file>VASCameraController.qml</file>
         <file>GraphicalAudioSource.qml</file>
         <file>MenuGraphicalAudioSource.qml</file>
+        <file>PositionEditingInterface.qml</file>
     </qresource>
 </RCC>
