Used workaround to avoid bug with window being visible causing segmentation fault. Can move audio source now.

--- a/qml.qrc
+++ b/qml.qrc
@@ -8,5 +8,6 @@
         <file>GraphicalAudioSource.qml</file>
         <file>MenuGraphicalAudioSource.qml</file>
         <file>PositionEditingInterface.qml</file>
+        <file>AttributesEditor.qml</file>
     </qresource>
 </RCC>
